--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Famous Quote</title>
-    <script src="other.js"></script>
+    <script src="other.js" defer></script>
 </head>
 <body>
 
