Let's see if this works, on pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Button element -->
     <button id="quoteButton">Click me to get a famous quote</button>
+    <div id="quoteDisplay"></div>
 
 </body>
 </html>
